Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL)
-
None
Description
The bug reported by MENT-1482 was decided to be fixed in the CS version as well. This ticket duplicates the enterprise report.
In the presence of a replication filter on a slave, revoking privileges from a non-existing user on the master breaks replication on the slave. Without the filter, the slave just proceeds normally without any issues.
How to reproduce:
- Set up a master/replica
- Configure a filter on the replica: replicate_do_wild_table=schema.%
- On the master, execute revoke all privileges from 'nonexistentuser'@'%';
Replication will break with:
Query caused different errors on master and slave.
Error on master: message (format)='Can't revoke all privileges for one or more of the requested users' error code=1269 ;
Error on slave: actual message='no error', error code=0.
Default database: ''.
Query: 'REVOKE ALL PRIVILEGES FROM 'nonexistentuser'@'%''
Attachments
Issue Links
- duplicates
-
MDEV-21721 Partially successful multi-user DROP breaks filtered replication
-
- Closed
-